# test_opengl

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  openglplot.cpp  test_opengl.pro
app/: main.cpp
build-test_opengl-Desktop-Debug/: Makefile  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp
qmake/: test_opengl.pro
sources/: mainwindow.cpp  mainwindow.h  openglplot.cpp  openglplot.h
sources/openglplot/: CMakeLists.txt  Microsoft_JhengHei_UI_256_128.bff  Microsoft_JhengHei_UI_high_res.bff  openglplot.cpp  openglplot.h  shaders.h
